--- a/index.html
+++ b/index.html
@@ -41,29 +41,28 @@
    <h1 class="text-center main-title">Our Menu</h1> 
    <div class="menu-content">
      <div class="col-md-12 col-sm-12 col-xs-12 menu-item">     
-       <h4 class="menu-title text-center">Chicken</h4>
+       <h4 class="menu-title text-center">sia<snowman></h4>
        <p class="text-left">
-        Zack Snyder's Justice League,[6] often referred to as the "Snyder Cut," is the 2021 director's cut of the 2017 American superhero film Justice League. It presents Justice League—the fifth film of the DC Extended Universe (DCEU) and based on the DC Comics superhero team of the same name—as director Zack Snyder had intended it before he left the production. Like the theatrical release, Zack Snyder's Justice League follows the Justice League—Batman (Ben Affleck), Superman (Henry Cavill), Wonder Woman (Gal Gadot), Cyborg (Ray Fisher), Aquaman (Jason Momoa), and the Flash (Ezra Miller)—as they attempt to save the world from the catastrophic threat of Darkseid (Ray Porter), Steppenwolf (Ciarán Hinds), and their army of Parademons.
-
-Justice League, released by Warner Bros. in 2017, suffered a difficult production. Its script underwent major changes before and during production between 2016 and 2017. In May 2017, Snyder stepped down during post-production following the death of his daughter, and Joss Whedon was hired to finish the film, completing it as an uncredited director. Whedon oversaw reshoots and other changes that incorporated a brighter tone and more humor, and cut the runtime down significantly in accordance with a mandate from Warner Bros. The theatrical Justice League received mixed reviews and was a box-office bomb, leading Warner Bros. to re-evaluate the future of the DCEU and focus development on individual films.
-
-As details surfaced about the film's troubled production and its state before Snyder stepped down, many fans expressed interest in an alternate cut more faithful to Snyder's vision. Fans and members of the cast and crew petitioned for the release of this, which they nicknamed the Snyder Cut. At the time, industry insiders regarded the release as unlikely. However, Warner Bros. decided to move ahead with it in February 2020; in May, Snyder announced that the original cut would be released as Zack Snyder's Justice League via the streaming service HBO Max. It cost around $70 million to complete the visual effects, score, and editing, with new material filmed in October 2020. The cut was originally planned to be released as both a miniseries and a four-hour film, but plans for the miniseries were scrapped by January 2021. The film is dedicated to the memory of Snyder's daughter, Autumn.
-
-Zack Snyder's Justice League was released via HBO Max on March 18, 2021. Critics generally considered the film an improvement over the 2017 theatrical release; praise was directed at Snyder's direction and the improved characterization, though the 4 hour runtime was criticized.
-	       Zack Snyder's Justice League,[6] often referred to as the "Snyder Cut," is the 2021 director's cut of the 2017 American superhero film Justice League. It presents Justice League—the fifth film of the DC Extended Universe (DCEU) and based on the DC Comics superhero team of the same name—as director Zack Snyder had intended it before he left the production. Like the theatrical release, Zack Snyder's Justice League follows the Justice League—Batman (Ben Affleck), Superman (Henry Cavill), Wonder Woman (Gal Gadot), Cyborg (Ray Fisher), Aquaman (Jason Momoa), and the Flash (Ezra Miller)—as they attempt to save the world from the catastrophic threat of Darkseid (Ray Porter), Steppenwolf (Ciarán Hinds), and their army of Parademons.
-
-Justice League, released by Warner Bros. in 2017, suffered a difficult production. Its script underwent major changes before and during production between 2016 and 2017. In May 2017, Snyder stepped down during post-production following the death of his daughter, and Joss Whedon was hired to finish the film, completing it as an uncredited director. Whedon oversaw reshoots and other changes that incorporated a brighter tone and more humor, and cut the runtime down significantly in accordance with a mandate from Warner Bros. The theatrical Justice League received mixed reviews and was a box-office bomb, leading Warner Bros. to re-evaluate the future of the DCEU and focus development on individual films.
-
-As details surfaced about the film's troubled production and its state before Snyder stepped down, many fans expressed interest in an alternate cut more faithful to Snyder's vision. Fans and members of the cast and crew petitioned for the release of this, which they nicknamed the Snyder Cut. At the time, industry insiders regarded the release as unlikely. However, Warner Bros. decided to move ahead with it in February 2020; in May, Snyder announced that the original cut would be released as Zack Snyder's Justice League via the streaming service HBO Max. It cost around $70 million to complete the visual effects, score, and editing, with new material filmed in October 2020. The cut was originally planned to be released as both a miniseries and a four-hour film, but plans for the miniseries were scrapped by January 2021. The film is dedicated to the memory of Snyder's daughter, Autumn.
-
-Zack Snyder's Justice League was released via HBO Max on March 18, 2021. Critics generally considered the film an improvement over the 2017 theatrical release; praise was directed at Snyder's direction and the improved characterization, though the 4 hour runtime was criticized.Zack Snyder's Justice League,[6] often referred to as the "Snyder Cut," is the 2021 director's cut of the 2017 American superhero film Justice League. It presents Justice League—the fifth film of the DC Extended Universe (DCEU) and based on the DC Comics superhero team of the same name—as director Zack Snyder had intended it before he left the production. Like the theatrical release, Zack Snyder's Justice League follows the Justice League—Batman (Ben Affleck), Superman (Henry Cavill), Wonder Woman (Gal Gadot), Cyborg (Ray Fisher), Aquaman (Jason Momoa), and the Flash (Ezra Miller)—as they attempt to save the world from the catastrophic threat of Darkseid (Ray Porter), Steppenwolf (Ciarán Hinds), and their army of Parademons.
-
-Justice League, released by Warner Bros. in 2017, suffered a difficult production. Its script underwent major changes before and during production between 2016 and 2017. In May 2017, Snyder stepped down during post-production following the death of his daughter, and Joss Whedon was hired to finish the film, completing it as an uncredited director. Whedon oversaw reshoots and other changes that incorporated a brighter tone and more humor, and cut the runtime down significantly in accordance with a mandate from Warner Bros. The theatrical Justice League received mixed reviews and was a box-office bomb, leading Warner Bros. to re-evaluate the future of the DCEU and focus development on individual films.
-
-As details surfaced about the film's troubled production and its state before Snyder stepped down, many fans expressed interest in an alternate cut more faithful to Snyder's vision. Fans and members of the cast and crew petitioned for the release of this, which they nicknamed the Snyder Cut. At the time, industry insiders regarded the release as unlikely. However, Warner Bros. decided to move ahead with it in February 2020; in May, Snyder announced that the original cut would be released as Zack Snyder's Justice League via the streaming service HBO Max. It cost around $70 million to complete the visual effects, score, and editing, with new material filmed in October 2020. The cut was originally planned to be released as both a miniseries and a four-hour film, but plans for the miniseries were scrapped by January 2021. The film is dedicated to the memory of Snyder's daughter, Autumn.
-
-Zack Snyder's Justice League was released via HBO Max on March 18, 2021. Critics generally considered the film an improvement over the 2017 theatrical release; praise was directed at Snyder's direction and the improved characterization, though the 4 hour runtime was criticized.
-       </p>
+		Don't cry, snowman, not in front of me/ Who'll catch your tears if you can't catch me, darling
+		If you can't catch me, darling/ Don't cry, snowman, don't leave me this way
+		A puddle of water can't hold me close, baby/ Can't hold me close, baby
+		I want you to know that I'm never leaving
+		'Cause I'm Mrs. Snow, 'til death we'll be freezing/ Yeah, you are my home, my home for all seasons
+		So come on, let's go/ Let's go below zero and hide from the sun
+		I love you forever where we'll have some fun/ Yes, let's hit the North Pole and live happily
+		Please don't cry no tears now, it's Christmas, baby/ My snowman and me/ My snowman and me/ Baby
+		Don't cry, snowman, don't you fear the sun/  Who'll carry me without legs to run, honey
+		Without legs to run, honey/ Don't cry, snowman, don't you shed a tear
+		Who'll hear my secrets if you/ don't have ears, baby
+		If you don't have ears, baby/ I want you to know that I'm never leaving
+		'Cause I'm Mrs. Snow, 'til death we'll be freezing
+		Yeah, you are my home, my home for all seasons/ So come on, let's go
+		Let's go below zero and hide from the sun
+		I love you forever where we'll have some fun
+		Yes, let's hit the North Pole and live happily
+		Please don't cry no tears now, it's Christmas, baby
+		My snowman and me/ My snowman and me/ Baby
+               </p>
      </div>
    </div>
  </div>
