--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a href="#" class="text-left navbar-brand"><h1>Food, LLC</h1></a>
+        <a href="#" class="text-left navbar-brand"><h1>sing a song</h1></a>
       </div>
       <div id="menu-collapsable-nav" class="collapse navbar-collapse">
         <ul id="nav-list" class="nav navbar-nav navbar-right visible-xs text-center">      
