--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     </nav>
   <section class="container-fluid menu">
   <div class="row">
-   <h1 class="text-center main-title">Our Menu</h1> 
+   <h1 class="text-center main-title">title</h1> 
    <div class="menu-content">
      <div class="col-md-12 col-sm-12 col-xs-12 menu-item">     
        <h4 class="menu-title text-center">sia<snowman></h4>
